--- a/pages/selected.css
+++ b/pages/selected.css
@@ -89,3 +89,59 @@ img {
 iframe {
     margin-left: 120px;
 }
+
+/*--------------------------------------ABOUT ME PAGE--------------------------------------------*/
+.about {
+    background-color: var(--black);
+    color: var(--lblue);
+    border: 7px solid var(--beige);
+}
+.about-top-right {
+    width: 100%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.about-links{
+    width: 100%;
+    display:flex;
+}
+.about-links a {
+    align-items: center;
+    background-color: var(--dblue);
+    border: 6px solid var(--beige);
+    border-radius: 5px;
+    display:flex;
+    font-weight: 700;
+    font-size: 20px;
+    height: 50px;
+    justify-content: center;
+    margin-right: 40px;
+    width: 200px;
+    transition: 200ms;
+}
+
+.about-links a:hover {
+    background-color: var(--blue);
+}
+
+.about-top {
+    display:flex;
+}
+.about-top h2, h4 {
+    width: 100%;
+    height: 50px;
+    color: var(--beige);
+    font-weight: 400;
+}
+
+.headshot{
+    border-radius: 100%;
+    border: 7px solid var(--beige);
+    margin: 40px;
+    height: 200px;
+    width: 200px;
+    float: left;
+}
