--- a/styles.css
+++ b/styles.css
@@ -232,10 +232,10 @@ body {
     background-image: radial-gradient(var(--lblue) 2px, transparent 0);
     background-size: 8px 8px;
 }
-.modeling-section h1 {
-    color: var(--lblue);
+.modeling-section h1, h3 {
+    color: var(--black) !important;
 }
-.modeling-section > h3, p {
+.modeling-section > p {
     color: var(--beige);
     line-height: 1.2;
 }
