--- a/main.css
+++ b/main.css
@@ -6,6 +6,23 @@
     --dblue: #3F3A72;
 }
 
+::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
+}
+body::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
+}
+.scrollable-container {
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+    overflow-y: hidden;
+    scroll-behavior: smooth;
+}
+body {
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+}
+
 body{
     background-color: var(--beige);
     border: 0;
