--- a/pages/selected.css
+++ b/pages/selected.css
@@ -80,6 +80,7 @@ img {
 
 .case-study h4 {
     color: var(--blue);
+    scroll-margin-top: 80px;
 }
 .case-study a {
     color: var(--blue);
@@ -150,4 +151,41 @@ iframe {
     height: 200px;
     width: 200px;
     float: left;
+}
+
+/*------------------KOREANIMATION--------------------------*/
+
+.side-nav{
+    align-items: flex-end;
+    display: flex;
+    flex-direction: column;
+    margin-top: 100px;
+    margin-right: 0;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 0; 
+}
+
+.side-nav p, .side-nav a {
+    text-align: center;
+    font-size: 16px;
+    width: 120px;
+    margin-right: 10%;
+}
+
+.side-nav a {
+    color: var(--blue);
+    line-height: 30px;
+    margin-top: 10px;
+    border-radius: 20px;
+    border: 3px solid var(--blue);
+    transform: translateY(0%);
+    transition: transform 0.1s ease-out, color 0.1s ease-out, border 0.1s ease-out;
+}
+.side-nav a:hover {
+    color: var(--dblue);
+    box-shadow: 3px 3px 0 0 var(--dblue);
+    border: 3px solid var(--dblue);
+    transform: translateY(-10%);
 }
