--- a/pages/selected.css
+++ b/pages/selected.css
@@ -74,7 +74,7 @@ img {
 }
 
 
-.case-study h1, h2, h3, h4, p, li, video, a {
+.case-study h1, h2, h3, h4, p, li, video{
     margin: 0px 40px;
 }
 
@@ -125,7 +125,7 @@ iframe {
     font-size: 20px;
     height: 50px;
     justify-content: center;
-    margin-right: 40px;
+    margin-right: 30px;
     width: 200px;
     transition: 200ms;
 }
