--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ font-family: 'Work Sans', sans-serif;
     color: var(--lblue);
     font-family: 'Work Sans', sans-serif;
     font-size: 20px;
-    line-height: 1;
+    line-height: 1.3;
     z-index: -1;
 }
 
@@ -123,7 +123,6 @@ font-family: 'Work Sans', sans-serif;
     border: 6px solid black;
     border-radius: 15px;
     width: 800px;
-    height: auto;
     transition: 200ms;
 }
 .case-study-container:hover {
@@ -133,20 +132,25 @@ font-family: 'Work Sans', sans-serif;
 
 .case-study-top {
     background-color: var(--blue);
-    display: flex;
-    height: 60px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     border-bottom: 6px solid black;
+    display: flex;
+    height: 45px;
+    width: 100%;
 }
 .case-study-top p {
-    font-size: 22px;
-    margin-left: 10px;
+    font-size: 20px;
     font-weight: 600;
+    font-family: 'Baloo Thambi 2', sans-serif;
+    margin-right: 20px;
+    text-align: right;
+    width: 80%;
+    margin-top: 12px;
 }
 
 .circle-detail:first-child{
-    margin-left: 30px;
+    margin-left: 20px;
 }
 .circle-detail{
     background-color: var(--beige);
@@ -154,18 +158,24 @@ font-family: 'Work Sans', sans-serif;
     border: 6px solid black;
     height: 15px;
     width: 15px;
-    margin: 18px 10px;
+    margin: 10px 5px;
+    position: sticky;
 }
 .case-study-container img {
-    height: 150px;
-    width: 100%;
+    height: 250px;
+    width: 250px;
     object-fit: cover;
-    border-bottom: 6px solid black;
+    border-bottom-left-radius: 8px;
+    border-right: 6px solid black;
+}
+
+.case-study-right {
+    display: flex;
 }
 .case-study-container h3 {
-    margin: 10px 30px;
+    margin: 20px 30px;
 }
-.case-study-container > p {
+.case-study-text p {
     color: black;
     margin: 10px 30px;
     padding-bottom: 15px;   
