--- a/pages/selected.css
+++ b/pages/selected.css
@@ -8,8 +8,8 @@ body {
     background-color: var(--lblue)
 }
 .content{
-    display:flex;
-    justify-content: center;
+    display: flex;
+    z-index: 0;
 }
 img {
     width: 500px;
@@ -26,11 +26,23 @@ img {
     width: 800px;
     height: auto;
 }   
+/*FOR SMALL OVERVIEW ON INDIVIDUAL PAGES*/
+.case-study-overview {
+    background: var(--beige);
+    border: 6px solid black;
+    border-radius: 15px;
+    box-shadow: 10px 10px 0px black;
+    margin-top: 100px;
+    margin-left: 100px;
+    width: 350px;
+    height: auto;
+}  
 
+/*other detailing for case study blocks*/
 .case-study-top {
     background-color: var(--blue);
     display: flex;
-    height: 60px;
+    height: 45px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     border-bottom: 6px solid black;
@@ -39,25 +51,25 @@ img {
 .case-study-top:hover {
     background-color: var(--dblue);
 }
-.case-study-container a {
-    color: white;
-}
+
 .case-study-top p {
+    color: var(--beige);
+    font-family: 'Baloo Thambi 2', sans-serif;
     font-size: 22px;
-    margin: 20px 10px;
     font-weight: 600;
+    margin: 7px 10px;
 }
 
 .circle-detail:first-child{
-    margin-left: 30px;
+    margin-left: 15px;
 }
 .circle-detail{
     background-color: var(--beige);
     border-radius: 100%;
-    border: 6px solid black;
-    height: 15px;
-    width: 15px;
-    margin: 18px 10px;
+    border: 5px solid black;
+    height: 13px;
+    width: 13px;
+    margin: 12px 5px;
 }
 .header {
     margin-left: 0px;
@@ -68,19 +80,14 @@ img {
     border-top: 6px solid black;
     border-bottom: 6px solid black;
 }
-.case-study-container > p {
-    color: black;
-    padding-bottom: 15px;
-}
 
 
 .case-study h1, h2, h3, h4, p, li, video{
-    margin: 0px 40px;
+    margin: 0px 30px;
 }
 
 .case-study h4 {
     color: var(--blue);
-    scroll-margin-top: 80px;
 }
 .case-study a {
     color: var(--blue);
@@ -156,22 +163,19 @@ iframe {
 /*------------------KOREANIMATION--------------------------*/
 
 .side-nav{
-    align-items: flex-end;
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin-top: 100px;
-    margin-right: 0;
+    right: 100px;
     position: fixed;
-    width: 100%;
     height: 100%;
-    z-index: 0; 
 }
 
 .side-nav p, .side-nav a {
     text-align: center;
     font-size: 16px;
     width: 120px;
-    margin-right: 10%;
 }
 
 .side-nav a {
