Centered div in dibby page

--- a/pages/selected.css
+++ b/pages/selected.css
@@ -23,8 +23,10 @@ img {
     border-radius: 15px;
     box-shadow: 10px 10px 0px black;
     margin: 130px 0;
-    width: 800px;
     height: auto;
+    max-width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 }   
 /*FOR SMALL OVERVIEW ON INDIVIDUAL PAGES*/
 .case-study-overview {
