--- a/main.css
+++ b/main.css
@@ -1,10 +1,13 @@
 :root {
-    --black: #040303;
-    --beige: #F2EFE0;
+    --black: #211731;
+    --beige: #F9DBBD;
     --lblue: #CECAFD;
     --blue: #7373FF;
     --dblue: #3F3A72;
+    --magenta: #DB3069;
 }
+
+/* Theme properties */
 
 html {
     scroll-behavior: smooth;
@@ -14,27 +17,21 @@ html {
     display: none;  
     /* Safari and Chrome */
 }
-body::-webkit-scrollbar { 
-    display: none;  /* Safari and Chrome */
-}
 .scrollable-container {
+    background-image: linear-gradient(var(--dblue), var(--blue), var(--lblue), var(--beige));
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
     scrollbar-width: none;  /* Firefox */
-    overflow-y: hidden;
     scroll-behavior: smooth;
 }
 body {
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
     scrollbar-width: none;  /* Firefox */
-}
-
-body{
-    background-color: var(--beige);
     border: 0;
     font-family: 'Rubik';
     margin: 0;
     padding: 0;
 }
+
 h1{
     color: var(--beige);
     font-size: 68px;
@@ -44,7 +41,7 @@ h1{
 }
 h2 {
     color: var(--black);
-    font-size: 55px;
+    font-size: 42px;
     font-weight: 800;
     margin: 0;
 }
