--- a/styles.css
+++ b/styles.css
@@ -6,39 +6,32 @@ font-family: 'Work Sans', sans-serif;
 */
 /*------------------------ LOGO --------------------------*/
 
-
-
-.scrollable-container{
-    background-image: linear-gradient(var(--dblue), var(--blue), var(--lblue), var(--beige));
-    width: 100%;
-    height: 640vh; /*makes it so that theres no stoppage when you're scrolling*/
-    overflow-y: auto;
-}
-
-
 .about-section{
     align-items: center;
     display: flex;
-    justify-content: center;
     flex-direction: column;
     height: 100vh;
+    justify-content: center;
 }
 .about-section h2{
-    animation: .8s ease-out 0s 1 FadeAndSlideIn;
-    color: var(--blue);
+    animation: .5s ease-out 0s 1 FadeAndSlideIn;
+    color: var(--magenta);
     font-family: 'Baloo Thambi 2';
-    line-height: 2;
-    margin-top: -20px;
-    z-index: -1;
+    margin-top: 100px;
+}
+.spacer{
+    height: 120px;
 }
 .about-section p {
-    text-align: center;
-    animation: 3s ease-out 0s 1 FadeAndSlideIn;
-    color: var(--lblue);
+    animation: 1.2s ease-out 0s 1 FadeAndSlideIn;
+    animation-fill-mode: forwards;
+    animation-delay: 2.3s;
+    color: var(--beige);
     font-family: 'Work Sans', sans-serif;
     font-size: 20px;
     line-height: 1.3;
-    z-index: -1;
+    text-align: center;
+    opacity: 0;
 }
 
 @keyframes FadeAndSlideIn {
@@ -60,28 +53,12 @@ font-family: 'Work Sans', sans-serif;
 0% {
     transform: translateY(100%);
 }
-70%{
+60%{
     transform: translateY(100%);
 }
 100% {
     transform: translateY(0);
 }
-}
-@keyframes scaleUp {
-    0% {
-        opacity: 0;
-    }
-    50% { 
-        opacity: 0;
-        transform: scale(70%);
-        }
-    80% { 
-        opacity: 100%;
-        transform: scale(110%);
-    }
-    100% { 
-        transform: scale(100%);
-    }
 }
 @keyframes floating {
     0% { transform: translate(0,  0px); }
@@ -90,27 +67,28 @@ font-family: 'Work Sans', sans-serif;
 }
 
 .logo{
-    animation: 1.5s infinite ease-in-out floating, 1.5s ease-in-out scaleUp;
-    width: 500px;
-    z-index: -1;
+    animation: 1.5s infinite ease-in-out floating;
+    animation-delay: 2s;
+    position: absolute;
+    width: 800px;
 }
 .logo-bg-animation {
-    animation: 2.5s ease-out 0s 1 slideInBottom;
+    animation: 3.3s ease-out 0s 1 slideInBottom;
     background: var(--dblue);
     position: absolute;
     width: 100%;
     height: 50%;
     top: 50%;
-    z-index: -2;
+    z-index: -1; /* keeps it from overlapping over case study section */
 }
 .logo-bg-animation2 {
-    animation: 2.2s ease-out 0s 1 slideInBottom;
+    animation: 3s ease-out 0s 1 slideInBottom;
     background: var(--blue);
     position: absolute;
     width: 100%;
     height: 50%;
     top: 50%;
-    z-index: -2;
+    z-index: -1; /* keeps it from overlapping over case study section */
 }
 
 
