changed short bio, working on case study reformatting

--- a/main.css
+++ b/main.css
@@ -49,6 +49,7 @@ h3 {
     color: var(--black);
     font-size: 28px;
     margin: 0;
+    font-family: 'Sneakers-Max-Oblique', sans-serif;
 }
 h4 {
     color: var(--black);
