--- a/styles.css
+++ b/styles.css
@@ -1,130 +1,49 @@
 /*
-font-family: 'Rubik', sans-serif;
+font-family: 'Sneakers-Max-Oblique', sans-serif;
 font-family: 'Baloo Thambi 2', sans-serif;
 font-family: 'Work Sans', sans-serif;
 
 */
-/*------------------------ LOGO --------------------------*/
-
-.about-section{
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    justify-content: center;
+@font-face {
+    font-family: "Sneakers-Max-Oblique";
+    src: url(Media/sneakers-max-300-bold-obl.otf);
 }
-.about-section h2{
-    animation: .5s ease-out 0s 1 FadeAndSlideIn;
-    color: var(--magenta);
-    font-family: 'Baloo Thambi 2';
-    margin-top: 100px;
-}
-.spacer{
-    height: 120px;
-}
-.about-section p {
-    animation: 1.2s ease-out 0s 1 FadeAndSlideIn;
-    animation-fill-mode: forwards;
-    animation-delay: 2.3s;
-    color: var(--beige);
-    font-family: 'Work Sans', sans-serif;
-    font-size: 20px;
-    line-height: 1.3;
-    text-align: center;
-    opacity: 0;
-}
-
-@keyframes FadeAndSlideIn {
-    0% {
-        opacity: 0;
-        transform: translateX(-10%);
-    }
-    50% {
-        opacity: 0;
-        transform: translateX(-10%);
-    }
-    100% {
-        opacity: 100;
-        transform: translateX(0%);
-    }
-}
-
-@keyframes slideInBottom {
-0% {
-    transform: translateY(100%);
-}
-60%{
-    transform: translateY(100%);
-}
-100% {
-    transform: translateY(0);
-}
-}
-@keyframes floating {
-    0% { transform: translate(0,  0px); }
-    50%  { transform: translate(0, -10px); }
-    100%   { transform: translate(0, 0px); }   
-}
-
-.logo{
-    animation: 1.5s infinite ease-in-out floating;
-    animation-delay: 2s;
-    position: absolute;
-    width: 800px;
-}
-.logo-bg-animation {
-    animation: 3.3s ease-out 0s 1 slideInBottom;
-    background: var(--dblue);
-    position: absolute;
-    width: 100%;
-    height: 50%;
-    top: 50%;
-    z-index: -1; /* keeps it from overlapping over case study section */
-}
-.logo-bg-animation2 {
-    animation: 3s ease-out 0s 1 slideInBottom;
-    background: var(--blue);
-    position: absolute;
-    width: 100%;
-    height: 50%;
-    top: 50%;
-    z-index: -1; /* keeps it from overlapping over case study section */
-}
-
-
-
 
 /*---------------------------------SELECTED WORKS------------------------------------*/
 
-.case-study-container {
+.case-study-popup {
     background: var(--beige);
-    border: 6px solid black;
+    border: 3px solid var(--black);
     border-radius: 15px;
-    width: 800px;
+    width: 600px;
     transition: 200ms;
     max-height: 300px;
 }
-.case-study-container:hover {
+.case-study-popup:hover {
     background: white;
-    box-shadow: 10px 10px 0px black;
+    box-shadow: 10px 10px 0px var(--black);
+    transform: translate(-5px,0);
+        -webkit-transform: translate(-5px,0);
+        -moz-transform: translate(-5px,0);
+        -o-transform: translate(-5px,0);
+        -ms-transform: translate(-5px,0);
 }
 
 .case-study-top {
-    background-color: var(--blue);
+    background-color: var(--magenta);
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    border-bottom: 6px solid black;
+    border-bottom: 3px solid var(--black);
     display: flex;
-    height: 45px;
-    width: 100%;
+    padding: 5px;
 }
 .case-study-top p {
     font-size: 20px;
     font-weight: 600;
     font-family: 'Baloo Thambi 2', sans-serif;
+    margin: 3px 0 0 0;
     text-align: right;
-    width: 85%;
-    margin-top: 12px;
+    width: 480px;
 }
 
 .circle-detail:first-child{
@@ -133,28 +52,34 @@ font-family: 'Work Sans', sans-serif;
 .circle-detail{
     background-color: var(--beige);
     border-radius: 100%;
-    border: 6px solid black;
-    height: 15px;
-    width: 15px;
-    margin: 10px 5px;
+    border: 3px solid var(--black);
+    height: 10px;
+    width: 10px;
+    margin: 5px 5px;
     position: sticky;
 }
-.case-study-container img {
-    height: 250px;
-    width: 250px;
-    object-fit: cover;
-    border-bottom-left-radius: 8px;
-    border-right: 6px solid black;
+.fa-arrow-up-right-from-square {
+    color: var(--beige);
+    line-height: 1;
+    font-size: 18px;
+    margin-top: 5px;
+    margin-left: 15px;
 }
 
-.case-study-right {
-    display: flex;
+/* case study popup text */
+
+.case-study-container img {
+    height: 300px;
+    width: auto;
+    object-fit: cover;
+    border-bottom-left-radius: 8px;
 }
+
 .case-study-container h3 {
-    margin: 20px 0px 10px 20px;
+    margin: 10px 0px 10px 20px;
 }
 .case-study-text p {
-    color: black;
+    color: var(--black);
     margin: 10px 20px;
     padding-bottom: 15px;   
 }
