--- a/logo_animation.css
+++ b/logo_animation.css
@@ -9,18 +9,16 @@
     animation: .5s ease-out 0s 1 FadeAndSlideIn;
     color: var(--magenta);
     font-family: 'Baloo Thambi 2';
-    margin-top: 100px;
-}
-.spacer{
-    height: 120px;
+    font-weight: 800;
+    margin-bottom: -100px;
+    margin-top: 50px; 
 }
 .about-section p {
     animation: 1.2s ease-out 0s 1 FadeAndSlideIn;
     animation-fill-mode: forwards;
     animation-delay: 2.3s;
     color: var(--beige);
-    font-family: 'Work Sans', sans-serif;
-    font-size: 20px;
+    font-size: 24px;
     line-height: 1.3;
     text-align: center;
     opacity: 0;
@@ -30,8 +28,12 @@
 .logo{
     animation: 1.5s infinite ease-in-out floating;
     animation-delay: 2s;
-    position: absolute;
     width: 800px;
+}
+.bot-half-section{
+    width: 70%;
+    margin-top: 40vh;
+    position: absolute;
 }
 .logo-bg-animation {
     animation: 3.3s ease-out 0s 1 slideInBottom;
