--- a/main.css
+++ b/main.css
@@ -13,21 +13,14 @@ html {
     scroll-behavior: smooth;
   }
 
-::-webkit-scrollbar { 
-    display: none;  
-    /* Safari and Chrome */
-}
 .scrollable-container {
     background-image: linear-gradient(var(--dblue), var(--blue), var(--lblue), var(--beige));
-    -ms-overflow-style: none;  /* Internet Explorer 10+ */
-    scrollbar-width: none;  /* Firefox */
+    overflow-x: hidden;
     scroll-behavior: smooth;
 }
 body {
-    -ms-overflow-style: none;  /* Internet Explorer 10+ */
-    scrollbar-width: none;  /* Firefox */
     border: 0;
-    font-family: 'Rubik';
+    font-family: 'Baloo Thambi 2';
     margin: 0;
     padding: 0;
 }
