--- a/main.css
+++ b/main.css
@@ -26,7 +26,7 @@ body {
 }
 
 h1{
-    font-size: 68px;
+    font-size: 62px;
     font-family: 'Gotens-Regular', sans-serif;
     font-style: italic;
     font-weight: 300;
@@ -35,7 +35,8 @@ h1{
 }
 h2 {
     font-family: 'Gotens-Regular', sans-serif;
-    font-size: 42px;
+    font-size: 35px;
+    line-height: 1;
     letter-spacing: 2px;
     font-style: italic;
     font-weight: 300;
@@ -43,7 +44,7 @@ h2 {
 }
 h3 { 
     font-family: 'Baloo Thambi 2', sans-serif;
-    font-size: 26px;
+    font-size: 24px;
     font-weight: 800;
     margin: 0;
 }
