--- a/pages/aboutme.css
+++ b/pages/aboutme.css
@@ -5,7 +5,7 @@ font-family: 'Work Sans', sans-serif;
 
 */
 body {
-    background-color: var(--black);
+    background-color: var(--beige);
     height: 100vh;
 }
 .content{
@@ -17,16 +17,16 @@ body {
 
 /*--------------------------------------ABOUT ME PAGE--------------------------------------------*/
 .button-popup {
-    margin: 100px;
-    width: 200px;
+    margin: 100px 0 0 100px;
+    width: 100px;
+    position: fixed;
 }
 .about {
-    background-color: var(--dblue);
-    width: 60vw;
-    display:flex;
+    width: 50vw;
+    display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0 20vw;
+    margin: 100px auto;
 }
 .about-top-right {
     width: 100%;
@@ -42,21 +42,22 @@ body {
 }
 .about-links a {
     align-items: center;
-    background-color: var(--beige);
-    border: 6px solid var(--black);
-    border-radius: 5px;
+    background-color: var(--blue);
+    border: 3px solid var(--black);
+    border-radius: 10px;
+    color: white;
     display:flex;
     font-weight: 700;
-    font-size: 20px;
-    height: 50px;
+    font-size: 18px;
+    height: 30px;
     justify-content: center;
-    margin-right: 30px;
-    width: 200px;
-    transition: 200ms;
+    margin-right: 20px;
+    width: 150px;
+    transition: 200ms   ;
 }
 
 .about-links a:hover {
-    background-color: var(--blue);
+    background-color: var(--black);
 }
 
 .about-top {
@@ -64,20 +65,20 @@ body {
 }
 .about-top h2, h4 {
     width: 100%;
-    height: 50px;
+    height: 0px;
     color: var(--blue);
     font-weight: 400;
 }
 .about p {
-    color: var(--beige);
+    color: var(--black);
     font-weight: 500;
 }
 
 .headshot{
-    border-radius: 100%;
-    border: 7px solid var(--black);
-    margin: 40px;
-    height: 200px;
-    width: 200px;
+    border-radius: 15px;
+    border: 3px solid var(--black);
+    margin-right: 40px;
+    height: 150px;
+    width: 150px;
     float: left;
 }
